--- a/pages/upload/upload.wxml
+++ b/pages/upload/upload.wxml
@@ -1,59 +1,68 @@
 <!--pages/upload.wxml-->
-  <view class="flex justify-center" wx:if="{{tasks.length}}">
-  <i-cell-group scroll-x="false">
+<view class="weui-flex" wx:if="{{tasks.length}}">
+<view class="weui-flex__item">
+  <i-cell-group >
     <i-cell wx:for="{{tasks}}" wx:key="{{ item }}">
-      <i-card class="flex align-center">
-        <view slot="content">
-        <image mode="aspectFit" src="{{item.filePath}}"></image>
-        <text>{{item.name}}</text>
+      <i-card class="flex align-center" thumb="{{item.filePath}}">
+        <view slot="content">          
+          <text>{{item.name}}</text>
         </view>
         <view slot="footer">
-        <view class="flex align-center" wx:if="{{item.state==UPLOADING}}">
-        <i-progress class="grow" percent="{{item.progress}}"></i-progress>
-        <i-button inline bind:click="abort" data-task="{{item}}" size="small" type="error">
-          取消
-        </i-button>
-      </view>
-      <view class="flex justify-end" wx:if="{{item.state==PROCESSING}}">
-        <i-spin></i-spin>
-        <text>服务器处理中...</text>
-      </view>
-      <view class="flex justify-end" wx:if="{{item.state==FINISHED}}">
-        <text>已完成</text>
-      </view>
-      <view class="flex align-center" wx:if="{{item.state==ERROR}}">
-        <i-alert data-task="{{item}}" type="error">
-          {{item.resp}}
-        </i-alert>
-        <i-button bind:click="closealert" data-task="{{item}}">
-          知道了
-        </i-button>
-      </view>
+          <view class="flex align-center" wx:if="{{item.state==UPLOADING}}">
+            <i-progress class="grow" percent="{{item.progress}}"></i-progress>
+            <i-button inline bind:click="abort" data-task="{{item}}" size="small" type="error">
+              取消
+            </i-button>
+          </view>
+          <view class="flex justify-end" wx:if="{{item.state==PROCESSING}}">
+            <i-spin></i-spin>
+            <text>服务器处理中...</text>
+          </view>
+          <view class="flex justify-end" wx:if="{{item.state==FINISHED}}">
+            <text>已完成</text>
+          </view>
+          <view class="flex align-center" wx:if="{{item.state==ERROR}}">
+            <i-alert data-task="{{item}}" type="error">
+              {{item.resp}}
+            </i-alert>
+            <i-button bind:click="closealert" data-task="{{item}}">
+              知道了
+            </i-button>
+          </view>
         </view>
 
       </i-card>
-      
-      
     </i-cell>
   </i-cell-group>
-  </view>
-  <view class="flex justify-center align-center" style="height: 200px" wx:else>
+</view>
+</view>
+<view class="weui-flex itemBox" style="height: 200px" wx:else>
+  <view class="weui-flex__item ">
     <text>
-			还没有选择任何文件
-		</text>
+        还没有选择任何文件
+      </text>
   </view>
-  <view class="bottombar align-button">
-    <i-panel>
-      <view class="flex justify-end">
-        <i-button bind:click="handleModelOpen" shape="circle" size="large" type="success">
-          添加
-        </i-button>
-        <i-button bind:click="nextstep" shape="circle" size="large" type="primary">
-          下一步
-        </i-button>
-      </view>
-    </i-panel>
-  </view>
+</view>
+<i-panel>
+<view class="weui-flex">
+    <view class="weui-flex__item">
+      <i-button bind:click="handleModelOpen" size="large" type="success">
+        添加
+      </i-button>
+    </view>
+    
+</view>
+<view class="weui-flex">
+   
+    <view class="weui-flex__item">
+      <i-button bind:click="nextstep" size="large" type="primary">
+        下一步
+      </i-button>
+    </view>
+</view>
+  </i-panel>
+
+
 
 <i-action-sheet visible="{{ modelVisible }}" actions="{{ actions }}" show-cancel bind:cancel="closeActionSheet" bind:click="handleClickChooseFileBtn" />
 
