--- a/testPage/test.wxml
+++ b/testPage/test.wxml
@@ -1,4 +1,19 @@
 <!--testPage/test.wxml-->
+<view>
+  <view class="weui-flex">
+    <view class="">
+      <view class="itemBox">123</view>
+    </view>
+    <view class="weui-flex__item">
+      <view class="itemBox">123</view>
+    </view>
+    <view class="">
+      <view class="itemBox">123</view>
+    </view>
+    
+  </view>
+</view>
+
 <i-cell-group>
   <i-cell wx:for="{{cells}}" wx:key="item">
   <i-card class="flex align-center">
@@ -9,4 +24,6 @@
 <view class="align-bottom">
 <i-button type="primary"></i-button>
 </view>
+
+
 
