--- a/pages/imageUpload/imageUpload.wxml
+++ b/pages/imageUpload/imageUpload.wxml
@@ -19,7 +19,7 @@
             </view>
             <view class="weui-uploader__bd">
               <view class="weui-uploader__files" id="uploaderFiles">
-                <block wx:for="{{tasks}}" wx:key="*this">
+                <block wx:for="{{tasks}}" wx:key="item">
                   <view class="weui-uploader__file weui-uploader__file_status" bindtap="previewImage" id="{{item}}">
                     <image class="weui-uploader__img" src="{{item.filePath}}" mode="aspectFill" />
                     <view class="weui-uploader__file-content" >
