--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,4 @@
-<!--index.wxml-->
+<!--index.wxml
 <view class="container" scroll-x="false">
     <button bindtap="bindPrintPictureTap">{{printPicture}}</button>
     <button bindtap="bindPrintDocTap">{{printDoc}}</button>
@@ -8,4 +8,23 @@
     <i-button type="primary" bind:click="findUser">查找</i-button>
     <i-button type="primary" bind:click="callCloudFun">这是一个按钮</i-button>
     <i-button type="primary" bind:click="lookupOrder">查看订单</i-button>
+</view>-->
+<view class="page">
+    <view class="page__hd">
+        <view class="page__title">花园小帮手</view>
+        <view class="page__desc">临桂时代花园小区生活app</view>
+    </view>
+    <view class="page__ft">
+        <view class="weui-grids">
+            <block wx:for="{{functions}}" wx:key="*this">
+                <bouton bindtap="gridTapHandle" data-task="{{item}}" class="weui-grid" hover-class="weui-grid_active">
+                    <i-icon size="24" type="{{item.icon}}" />
+                    <view class="weui-grid__label">{{item.name}}</view>
+                </bouton>
+            </block>
+        </view>
+    </view>
 </view>
+
+<!----other stuff----->
+<i-toast id="toast" />
