--- a/pages/orderSubmitFail/orderSubmitFail.wxml
+++ b/pages/orderSubmitFail/orderSubmitFail.wxml
@@ -5,10 +5,10 @@
         </view>
         <view class="weui-msg__text-area">
             <view class="weui-msg__title">操作失败</view>
-            <view class="weui-msg__desc">内容详情，可根据实际需要安排，如果换行则不超过规定长度，居中展现<navigator url="" class="weui-msg__link">文字链接</navigator></view>
+            <view class="weui-msg__desc">出现这种情况可能是网络不稳定造成,请请检查您的网络连接或者稍后重试.</view>
         </view>
         <view class="weui-msg__tips-area">
-            <view class="weui-msg__tips">内容详情，可根据实际需要安排，如果换行则不超过规定长度，居中展现<navigator url="" class="weui-msg__link">文字链接</navigator></view>
+            <view class="weui-msg__tips">感谢您一直以来的支持.</view>
         </view>
         <view class="weui-msg__opr-area">
             <view class="weui-btn-area">
@@ -18,9 +18,9 @@
         <view class="weui-msg__extra-area">
             <view class="weui-footer">
                 <view class="weui-footer__links">
-                    <navigator url="" class="weui-footer__link">底部链接文本</navigator>
+                    <navigator url="" class="weui-footer__link">自打印</navigator>
                 </view>
-                <view class="weui-footer__text">Copyright © 2008-2016 weui.io</view>
+                <view class="weui-footer__text">Copyright © 2020 Roy Huang</view>
             </view>
         </view>
     </view>
