--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,29 +1,25 @@
-<!--index.wxml
-<view class="container" scroll-x="false">
-    <button bindtap="bindPrintPictureTap">{{printPicture}}</button>
-    <button bindtap="bindPrintDocTap">{{printDoc}}</button>
-    <i-button type="primary" bind:click="handleClick">这是一个按钮</i-button>
-    <i-button type="primary" bind:click="addUser">添加用户</i-button>
-    <i-button type="primary" bind:click="deleteUser">删除</i-button>
-    <i-button type="primary" bind:click="findUser">查找</i-button>
-    <i-button type="primary" bind:click="callCloudFun">这是一个按钮</i-button>
-    <i-button type="primary" bind:click="lookupOrder">查看订单</i-button>
-</view>-->
+
 <view class="page">
     <view class="page__hd">
-        <view class="page__title">花园小帮手</view>
-        <view class="page__desc">临桂时代花园小区生活app</view>
+        <view class="page__title">自打印</view>
+        <view class="page__desc">临桂时代花园小区生活助手</view>
     </view>
     <view class="page__ft">
         <view class="weui-grids">
             <block wx:for="{{functions}}" wx:key="*this">
-                <bouton bindtap="gridTapHandle" data-task="{{item}}" class="weui-grid" hover-class="weui-grid_active">
+                <bouton bindtap="gridTapHandle" data-task="{{item}}" class="weui-grid_4" hover-class="weui-grid_active">
                     <i-icon size="24" type="{{item.icon}}" />
                     <view class="weui-grid__label">{{item.name}}</view>
                 </bouton>
             </block>
         </view>
     </view>
+    <view class="weui-footer weui-footer_fixed-bottom">
+            <view class="weui-footer__links">
+                <navigator url="../../index/index" class="weui-footer__link">自打印</navigator>
+            </view>
+            <view class="weui-footer__text">Copyright © 2020 Roy Huang</view>
+        </view>
 </view>
 
 <!----other stuff----->
