--- a/pages/imageUpload/imageUpload.wxml
+++ b/pages/imageUpload/imageUpload.wxml
@@ -41,6 +41,7 @@
                 上传照片小于10M
               </view>
             </view>
+            <!--bd-->
             <view class="weui-uploader__bd">
               <view class="weui-uploader__files" id="uploaderFiles">
                 <block wx:for="{{tasks}}" wx:key="item">
@@ -66,7 +67,13 @@
               <view class="weui-uploader__input-box">
                 <view class="weui-uploader__input" bindtap="handleModelOpen"></view>
               </view>
+           
+           
+           
+            
+           
             </view>
+            <!--end bd-->
           </view>
         </view>
       </view>
