--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -1,18 +1,70 @@
 
 <i-panel>
   <i-notice-bar icon="systemprompt" closable loop speed="1000">
-    价格说明：照片打印统一6寸,0.5元/张,塑封照片1元/张
+    {{info}}
   </i-notice-bar>
 </i-panel>
 
 <i-panel title="配送信息">
-  <i-input value="{{name}}" bind:change="nickNameChanged" title="收货人" placeholder="收货人" />
+<view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell ">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">收货人</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input value="{{name}}" bindinput="nickNameChanged" class="weui-input" placeholder="收货人姓名"/>
+                </view>
+            </view>
+            <view class="weui-cell ">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">手机号</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input value="{{phoneNum}}" class="weui-input" bindinput="phoneNumberChanged" type="number" placeholder="请输入手机号" />
+                </view>
+                
+            </view>
+             <view class="weui-cell ">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">详细地址</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <input value="{{address}}" class="weui-input" bindinput="addressChanged" placeholder="请输入详细地址" />
+                </view>
+                
+            </view>
 
-  <i-input value="{{phoneNum}}" bind:change="phoneNumberChanged" type="number" title="联系电话" placeholder="请输入手机号" />
-
-  <i-input value="{{address}}" bind:change="addressChanged" type="textarea" title="详细地址" placeholder="输入收获地址" maxlength="50" />
-
-  <i-input value="{{comment}}" bind:change="commentChanged" title="备注" placeholder="备注信息" />
+            <!--
+            <view class="weui-cell ">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">日期</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
+                        <view class="weui-input">{{date}}</view>
+                    </picker>
+                </view>
+            </view>
+            <view class="weui-cell ">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">时间</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="time" value="{{time}}" start="09:01" end="21:01" bindchange="bindTimeChange">
+                        <view class="weui-input">{{time}}</view>
+                    </picker>
+                </view>
+            </view>
+            -->
+            <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell">
+                <view class="weui-cell__bd">
+                    <textarea class="weui-textarea" placeholder="备注信息" style="height: 3.3em" maxlength="45" bindinput="commentChanged"/>
+                    <view class="weui-textarea-counter">{{commentInfo}}</view>
+                </view>
+            </view>
+        </view>
+        </view>
 </i-panel>
 
 <i-panel title="打印设置">
