--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,14 +2,17 @@
 <view class="page">
     <view class="page__hd">
         <view class="page__title">自打印</view>
-        <view class="page__desc">临桂时代花园小区生活助手</view>
+        <view class="page__desc">您的小区生活助手</view>
     </view>
     <view class="page__ft">
         <view class="weui-grids">
             <block wx:for="{{functions}}" wx:key="*this">
-                <bouton bindtap="gridTapHandle" data-task="{{item}}" class="weui-grid_4" hover-class="weui-grid_active" wx:if="{{item.isVisible}}">
+                <bouton  data-task="{{item}}" class="weui-grid_4" hover-class="weui-grid_active" wx:if="{{item.isVisible}}">
+                    
+                    <button class="gridButton" data-task="{{item}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo">
                     <i-icon size="24" type="{{item.icon}}" />
                     <view class="weui-grid__label">{{item.name}}</view>
+                    </button>
                 </bouton>
             </block>
         </view>
