--- a/pages/info/info.wxml
+++ b/pages/info/info.wxml
@@ -12,7 +12,7 @@
                     <view class="weui-label">收货人</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input value="{{name}}" bindinput="nickNameChanged" class="weui-input" placeholder="收货人姓名"/>
+                    <input value="{{name}}" bindinput="nickNameChanged" class="weui-input" disabled="true" placeholder="收货人姓名"/>
                 </view>
             </view>
             <view class="weui-cell ">
@@ -20,18 +20,20 @@
                     <view class="weui-label">手机号</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input value="{{phoneNum}}" class="weui-input" bindinput="phoneNumberChanged" type="number" placeholder="请输入手机号" />
+                    <input value="{{phoneNum}}" class="weui-input" bindinput="phoneNumberChanged" disabled="true" type="number" placeholder="请输入手机号" />
                 </view>
                 
             </view>
-             <view class="weui-cell ">
+             <view class="weui-cell weui-cell_vcode">
                 <view class="weui-cell__hd">
                     <view class="weui-label">详细地址</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input value="{{address}}" class="weui-input" bindinput="addressChanged" placeholder="请输入详细地址" />
+                    <input value="{{address}}" class="weui-input" bindinput="addressChanged" disabled="true" placeholder="请输入详细地址" />
                 </view>
-                
+                <view class="weui-cell__ft">
+                    <view bindtap="chooseAddress" class="weui-vcode-btn">修改</view>
+                </view>
             </view>
 
             <!--
@@ -67,7 +69,7 @@
         </view>
 </i-panel>
 
-<i-panel title="打印设置">
+<i-panel title="打印设置" wx:if="{{orderType==1}}">
   <i-radio value="是否塑封" disabled="{{disable}}" checked="{{protectionChecked}}" bindchange="handleProtectionChange" position="right">
   </i-radio>
   <i-cell-group>
