--- a/pages/itemDetail/itemDetail.wxml
+++ b/pages/itemDetail/itemDetail.wxml
@@ -1,31 +1,40 @@
- <view class="page__bd">
+ <view class="">
 
     <view class="section section_gap">
       
       <view class="section__ctn">
-        <image style="width: 100%; height: 300px; background-color: #eeeeee;" mode="aspectFill" src="https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme6_qeeojf.jpg"></image>
+        <image style="width: 100%; height: 250px; background-color: #eeeeee;" mode="aspectFill" src="{{item.itemImgs[0]}}"></image>
       </view>
     </view>
-    <view class="section section_gap">
-      
-      <view class="section__ctn">
-        <image style="width: 100%; height: 300px; background-color: #eeeeee;" mode="aspectFill" src="https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme6_qeeojf.jpg"></image>
-      </view>
-    </view>
-    <view class="section section_gap">
-      
-      <view class="section__ctn">
-        <image style="width: 100%; height: 300px; background-color: #eeeeee;" mode="aspectFill" src="https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme6_qeeojf.jpg"></image>
-      </view>
-    </view>
-    <view class="section section_gap">
-      
-      <view class="section__ctn">
-        <image style="width: 100%; height: 300px; background-color: #eeeeee;" mode="aspectFill" src="https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme6_qeeojf.jpg"></image>
-      </view>
-    </view>
+    
   </view>
-<!--
+
+<view class="page">
+    
+    <view class="">
+        <view class="weui-article">
+            <view class="weui-article__h1 .money">¥{{item.price}}</view>
+            <view class="weui-article__section">
+                <view class="weui-article__h2">{{item.title}}</view>
+                <view class="weui-article__section">
+                    <view class="weui-article__h3"></view>
+                    <view class="weui-article__p">
+                        {{item.info}}
+                    </view>
+                    <view class="weui-article__p" wx:for-item="image" wx:for="{{item.itemImgs}}">
+                        <image class="weui-article__img" src="{{image}}" mode="aspectFit" style="height: 250px" />
+                      
+                    </view>
+                </view>
+               
+            </view>
+        </view>
+    </view>
+</view>
+  <view class="page_bd">
+    <text></text>
+  </view>
+<!-->
   <mp-video-swiper
   class="video-swiper" 
   video-list="{{videoList}}" 
@@ -39,6 +48,13 @@
   bindloadedmetadata="onLoadedMetaData">
   </mp-video-swiper>-->
 
-  <view class="weui-footer_fixed-bottom">
-    <button type="primary">dasdas</button>
+  <view class=".weui-bottom">
+  <view class="weui-form-preview">
+  <view class="weui-form-preview__hd">
+  <view class="weui-form-preview__item">
+                    <view class="weui-form-preview__value_in-hd"><button class="buyBtn" bindtap="handleBuy"><text class="buyText">购买</text></button></view>
+                </view>
+    </view>
+    </view>
   </view>
+  
