--- a/pages/itemDetail/itemDetail.wxss
+++ b/pages/itemDetail/itemDetail.wxss
@@ -4,3 +4,9 @@ mp-video-swiper {
     width: 100%;
     height: 100%;
 }
+
+.money{color: red}
+.buyBtn{background: red;width: 70px;height: 50px;right: 0px}
+.buyText{color: white; font-style:  normal}
+
+.weui-bottom{position:fixed;bottom:0px;left:0;right:0}
